--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,9 +30,9 @@ jobs:
         with:
           node-version: 20.x
           cache: 'pnpm'
-      - name: Build zh-translator
+      - name: Build
         run: |
-          pnpm build:zh-translator
+          pnpm build
       - name: Build extension
         run: |
           pnpm build:extension
@@ -40,4 +40,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            packages/extension/build/*.zip
+            build/*.zip
