--- a/pages/content/package.json
+++ b/pages/content/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-select": "^5.10.2",
+    "simplebar-react": "^3.3.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
