build: use terser

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "adm-zip": "0.5.16",
     "esno": "4.8.0",
     "postcss": "^8.5.6",
+    "terser": "^5.44.0",
     "tsup": "8.5.0",
     "typescript": "5.9.2"
   }
