--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "@ai-translator/constants",
+  "name": "@libs/constants",
   "version": "1.0.0",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
-  ]
+  ],
+  "scripts": {
+    "dev": "NODE_ENV=development bun ./build.ts",
+    "build": "NODE_ENV=production bun ./build.ts"
+  },
+  "devDependencies": {
+    "bun-plugin-dts": "^0.3.0"
+  }
 }
