--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,35 +14,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set node
-        uses: actions/setup-node@v4
+      - name: Set bun
+        uses: oven-sh/setup-bun@v2
         with:
-          registry-url: https://registry.npmjs.org/
-          node-version: lts/*
-      - run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: Setup pnpm
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
-          run_install: true
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-          cache: 'pnpm'
+          bun-version: latest
       - name: Build
         run: |
-          pnpm build
+          bun build
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             build/*.zip
+      - name: Changelog
+        run: npx changelogithub
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
