--- a/pages/content/package.json
+++ b/pages/content/package.json
@@ -2,8 +2,12 @@
   "name": "@ai-translator/content",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "NODE_ENV=development bun ./build.ts",
+    "build": "NODE_ENV=production bun ./build.ts"
+  },
   "dependencies": {
-    "@ai-translator/constants": "workspace:*",
+    "@libs/constants": "workspace:*",
     "@ant-design/icons": "^6.0.0",
     "@floating-ui/dom": "^1.7.4",
     "antd": "^5.27.2",
