--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,15 +18,17 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
+      - name: Install dependencies
+        run: bun install
       - name: Build
         run: |
           bun build
+      - name: Changelog
+        run: bunx changelogen@latest --output CHANGELOG.md --noAuthors
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             build/*.zip
-      - name: Changelog
-        run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
