--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,10 +19,10 @@ jobs:
         with:
           bun-version: latest
       - name: Install dependencies
-        run: bun run install
+        run: bun install
       - name: Build
         run: |
-          bun build
+          bun run build
       - name: Changelog
         run: bunx changelogen@latest --output CHANGELOG.md --noAuthors
         env:
