--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,14 +23,6 @@ jobs:
       - name: Build
         run: |
           bun run build
-      - name: Changelog
-        run: bunx changelogen@latest --output CHANGELOG.md --noAuthors --to main
+      - run: bunx changelogithub --assets build/*.zip
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          body: |
-            Please refer to [CHANGELOG.md](https://github.com/Plumbiu/ai-translator/blob/main/CHANGELOG.md) for details
-          files: |
-            build/*.zip
