--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,11 +23,17 @@ jobs:
       - name: Build
         run: |
           bun run build
+      - name: Get previous tag
+        id: prev_tag
+        run: |
+          git fetch --tags
+          PREV_TAG=$(git tag --sort=-version:refname | head -2 | tail -1)
+          echo "prev_tag=${PREV_TAG:-HEAD}" >> $GITHUB_OUTPUT
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           body: |
-            Change log: https://github.com/Plumbiu/ai-translator/compare/main...${{ github.ref_name }}
+            Change log: https://github.com/Plumbiu/ai-translator/compare/${{ steps.prev_tag.outputs.prev_tag }}...${{ github.ref_name }}
 
             See the assets to download this version.
           files: |
