--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/minimist": "^1.2.5",
     "adm-zip": "0.5.16",
     "minimist": "^1.2.8",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.6",
+    "postcss-prefixwrap": "^1.57.0",
     "simple-git-hooks": "^2.13.1"
   },
-
   "lint-staged": {
     "*": [
       "bun lint"
