--- a/pages/content/tsconfig.json
+++ b/pages/content/tsconfig.json
@@ -18,5 +18,5 @@
     "useDefineForClassFields": true,
     "verbatimModuleSyntax": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "./index.d.ts"]
 }
