--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
-    "useDefineForClassFields": true
+    "useDefineForClassFields": true,
+    "verbatimModuleSyntax": true
   },
   "exclude": ["node_modules", "dist", "build"],
   "include": ["**/*.ts", "**/*.tsx"]
