--- a/biome.json
+++ b/biome.json
@@ -143,7 +143,7 @@
         "noBarrelFile": "off",
         "noDelete": "error",
         "noReExportAll": "off",
-        "useTopLevelRegex": "error",
+        "useTopLevelRegex": "off",
         "noDynamicNamespaceImportAccess": "error",
         "noImgElement": "off",
         "noNamespaceImport": "off"
