--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
     "@libs/bundle-utils": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/adm-zip": "0.5.7",
     "@types/bun": "^1.2.21",
     "@types/chrome": "latest",
     "@types/dom-chromium-ai": "0.0.9",
     "@types/minimist": "^1.2.5",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "adm-zip": "0.5.16",
     "cssnano": "^7.1.1",
     "minimist": "^1.2.8",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "postcss-prefixwrap": "^1.57.0",
     "simple-git-hooks": "^2.13.1"
   },
   "lint-staged": {
@@ -45,5 +47,9 @@
   },
   "simple-git-hooks": {
     "pre-commit": "bunx lint-staged"
+  },
+  "dependencies": {
+    "daisyui": "^5.1.10",
+    "tailwindcss": "^4.1.13"
   }
 }
